--- a/html/musica.html
+++ b/html/musica.html
@@ -10,73 +10,92 @@
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <link rel="stylesheet" href="../css/musica.css">
   <link rel="stylesheet" href="../css/barraNavegacao.css">
-  <link rel = "shortcut icon" type = "imagem/x-icon" href = "../img/skymusic.png"/>
+  <link rel="shortcut icon" type="imagem/x-icon" href="../img/skymusic.png" />
 
 </head>
 
 <body>
 
   <nav class="navbar background">
-
     <ul class="nav-list">
-      <li><a href="../index.html">Home</a></li>
-      <li><a href="../html/musica.html">Músicas</a></li>
-      <li><a href="../html/login.html">Login</a></li>
-      <li><a href="../html/sobre.html">Sobre</a></li>
+
+      <div class="row">
+        <div class="col-sm-2">
+          <a class="link" href="../index.html">Home</a>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-2">
+          <a class="link" href="../html/musica.html">Músicas</a>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-2">
+          <a class="link" href="../html/login.html">Login</a>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-2">
+          <a class="link" href="../html/sobre.html">Sobre</a>
+        </div>
+      </div>
+
     </ul>
-
-    <div class="rightNav">
-      <ul class="nav-list">
-        <li><img src="../img/skymusic.png" class="img" width="100"></li>
-      </ul>
-    </div>
-
-    <div class="rightNav2">
-      <ul class="nav-list">
-      </ul>
-    </div>
   </nav>
 
   <h3>Lançamentos</h3>
 
-  <div id="musica2">
-    <div id="card" class="card" style="width: 17%;">
-      <img src="../img/lancamentos/assaltante.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Assaltante</h5>
-        <a href="#" class="btn btn-primary">PLAY</a>
+  <div class="row" id="musica2">
+    <div class="col-sm-2">
+      <div id="card" class="card" style="width: 100%;">
+        <img src="../img/lancamentos/assaltante.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Assaltante</h5>
+          <a href="#" class="btn btn-primary">PLAY</a>
+        </div>
       </div>
     </div>
 
-    <div id="card" class="card" style="width: 17%;">
-      <img src="../img/lancamentos/FoiBom.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Foi bom, mas não diferente</h5>
-        <a href="#" class="btn btn-primary">PLAY</a>
+    <div class="col-sm-2">
+      <div id="card" class="card" style="width: 100%;">
+        <img src="../img/lancamentos/meunumero.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Meu número </h5>
+          <a href="#" class="btn btn-primary">PLAY</a>
+        </div>
       </div>
     </div>
 
-    <div id="card" class="card" style="width: 17%;">
-      <img src="../img/lancamentos/HajaColirio.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Haja colírio</h5>
-        <a href="#" class="btn btn-primary">PLAY</a>
+    <div class="col-sm-2">
+      <div id="card" class="card" style="width: 100%;">
+        <img src="../img/lancamentos/HajaColirio.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Haja colírio</h5>
+          <a href="#" class="btn btn-primary">PLAY</a>
+        </div>
       </div>
     </div>
 
-    <div id="card" class="card" style="width: 17%;">
-      <img src="../img/lancamentos/rojao.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Rojão</h5>
-        <a href="#" class="btn btn-primary">PLAY</a>
+    <div class="col-sm-2">
+      <div id="card" class="card" style="width: 100%;">
+        <img src="../img/lancamentos/rojao.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Rojão</h5>
+          <a href="#" class="btn btn-primary">PLAY</a>
+        </div>
       </div>
     </div>
 
-    <div id="card" class="card" style="width: 17%;">
-      <img src="../img/lancamentos/sereia.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Sereia</h5>
-        <a href="#" class="btn btn-primary">PLAY</a>
+    <div class="col-sm-2">
+      <div id="card" class="card" style="width: 100%;">
+        <img src="../img/lancamentos/sereia.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Sereia</h5>
+          <a href="#" class="btn btn-primary">PLAY</a>
+        </div>
       </div>
     </div>
 
@@ -85,47 +104,56 @@
 
   <h3>Recomendado</h3>
 
-  <div id="musica2">
-    <div id="card" class="card" style="width: 17%;">
-      <img src="../img/recomendado/arranhao.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Arranhão</h5>
-        <a href="#" class="btn btn-primary">PLAY</a>
+  <div class="row" id="musica2">
+    <div class="col-sm-2">
+      <div id="card" class="card" style="width: 100%;">
+        <img src="../img/recomendado/arranhao.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Arranhão</h5>
+          <a href="#" class="btn btn-primary">PLAY</a>
+        </div>
       </div>
     </div>
 
-    <div id="card" class="card" style="width: 17%;">
-      <img src="../img/recomendado/bloqueado.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Bloqueado</h5>
-        <a href="#" class="btn btn-primary">PLAY</a>
+    <div class="col-sm-2">
+      <div id="card" class="card" style="width: 100%;">
+        <img src="../img/recomendado/bloqueado.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Bloqueado</h5>
+          <a href="#" class="btn btn-primary">PLAY</a>
+        </div>
       </div>
     </div>
 
-    <div id="card" class="card" style="width: 17%;">
-      <img src="../img/recomendado/MalFeito.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Mal feito</h5>
-        <a href="#" class="btn btn-primary">PLAY</a>
+    <div class="col-sm-2">
+      <div id="card" class="card" style="width: 100%;">
+        <img src="../img/recomendado/MalFeito.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Mal feito</h5>
+          <a href="#" class="btn btn-primary">PLAY</a>
+        </div>
       </div>
     </div>
 
-    <div id="card" class="card" style="width: 17%;">
-      <img src="../img/recomendado/malvadao.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Malvadão 3</h5>
-        <a href="#" class="btn btn-primary">PLAY</a>
+    <div class="col-sm-2">
+      <div id="card" class="card" style="width: 100%;">
+        <img src="../img/recomendado/malvadao.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Malvadão 3</h5>
+          <a href="#" class="btn btn-primary">PLAY</a>
+        </div>
       </div>
     </div>
 
-    <div id="card" class="card" style="width: 17%;">
-      <img src="../img/recomendado/volante.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Molhando o volante</h5>
-        <a href="#" class="btn btn-primary">PLAY</a>
+    <div class="col-sm-2">
+      <div id="card" class="card" style="width: 100%;">
+        <img src="../img/recomendado/volante.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Molhando o volante</h5>
+          <a href="#" class="btn btn-primary">PLAY</a>
+        </div>
       </div>
     </div>
-
   </div>
 
 
@@ -133,47 +161,56 @@
 
   <h3>Em alta</h3>
 
-  <div id="musica2">
-    <div id="card" class="card" style="width: 17%;">
-      <img src="../img/alta/Assunto.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Assunto delicado</h5>
-        <a href="#" class="btn btn-primary">PLAY</a>
+  <div class="row" id="musica2">
+    <div class="col-sm-2">
+      <div id="card" class="card" style="width: 100%;">
+        <img src="../img/alta/Assunto.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Assunto delicado</h5>
+          <a href="#" class="btn btn-primary">PLAY</a>
+        </div>
       </div>
     </div>
 
-    <div id="card" class="card" style="width: 17%;">
-      <img src="../img/alta/Casei.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Casei com a putaria</h5>
-        <a href="#" class="btn btn-primary">PLAY</a>
+    <div class="col-sm-2">
+      <div id="card" class="card" style="width: 100%;">
+        <img src="../img/alta/Casei.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Casei com a putaria</h5>
+          <a href="#" class="btn btn-primary">PLAY</a>
+        </div>
       </div>
     </div>
 
-    <div id="card" class="card" style="width: 17%;">
-      <img src="../img/alta/GostoAssim.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Eu gosto assim</h5>
-        <a href="#" class="btn btn-primary">PLAY</a>
+    <div class="col-sm-2">
+      <div id="card" class="card" style="width: 100%;">
+        <img src="../img/alta/GostoAssim.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Eu gosto assim</h5>
+          <a href="#" class="btn btn-primary">PLAY</a>
+        </div>
       </div>
     </div>
 
-    <div id="card" class="card" style="width: 17%;">
-      <img src="../img/alta/PoesiaAcustica.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Poesia acústica 13</h5>
-        <a href="#" class="btn btn-primary">PLAY</a>
+    <div class="col-sm-2">
+      <div id="card" class="card" style="width: 100%;">
+        <img src="../img/alta/PoesiaAcustica.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Poesia acústica 13</h5>
+          <a href="#" class="btn btn-primary">PLAY</a>
+        </div>
       </div>
     </div>
 
-    <div id="card" class="card" style="width: 17%;">
-      <img src="../img/alta/sofrencia.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Sofrência remix</h5>
-        <a href="#" class="btn btn-primary">PLAY</a>
+    <div class="col-sm-2">
+      <div id="card" class="card" style="width: 100%;">
+        <img src="../img/alta/sofrencia.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Sofrência remix</h5>
+          <a href="#" class="btn btn-primary">PLAY</a>
+        </div>
       </div>
     </div>
-
   </div>
 
 
