--- a/html/sobre.html
+++ b/html/sobre.html
@@ -16,28 +16,48 @@
 <body>
 
   <nav class="navbar background">
-
     <ul class="nav-list">
-      <li><a href="../index.html">Home</a></li>
-      <li><a href="../html/musica.html">Músicas</a></li>
-      <li><a href="../html/login.html">Login</a></li>
-      <li><a href="../html/sobre.html">Sobre</a></li>
+      
+      <div class="row">
+        <div class="col-sm-2">
+          <a class="link" href="../index.html">Home</a>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-2">
+          <a class="link" href="../html/musica.html">Músicas</a>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-2">
+          <a class="link" href="../html/login.html">Login</a>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-2">
+          <a class="link" href="../html/sobre.html">Sobre</a>
+        </div>
+      </div>
+
     </ul>
-
-    <div class="rightNav">
-      <ul class="nav-list">
-        <li><img src="../img/skymusic.png" class="img" width="100"></li>
-      </ul>
-    </div>
-
-    <div class="rightNav2">
-      <ul class="nav-list">
-      </ul>
-    </div>
   </nav>
 
-  <p class="sobre">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quibusdam reiciendis itaque magni eveniet. Necessitatibus nihil explicabo quis libero tempore aspernatur animi ab minima, illo aperiam, ad alias aliquam velit iure id vitae cumque laudantium voluptate possimus. Repellat impedit tempora consequuntur quo sapiente, non odit blanditiis dolores inventore ipsum consequatur animi incidunt maxime dignissimos dolor voluptatem. Saepe laborum id tenetur ducimus similique quas beatae adipisci deleniti asperiores. Recusandae, facere! Fugit autem numquam ullam itaque consequatur architecto sunt saepe modi nihil. Nesciunt accusantium explicabo culpa laboriosam quae magni minima nostrum atque? Odio fuga deserunt unde enim aspernatur doloribus tempore iste officia hic explicabo. Repudiandae rerum inventore harum laudantium. Veritatis a blanditiis aut non consequuntur. Porro, natus architecto. Cumque laudantium, doloribus facilis possimus perspiciatis commodi voluptatum impedit corrupti eius eveniet quibusdam magnam. Perspiciatis expedita quia sapiente explicabo est eligendi obcaecati, nisi voluptate minima culpa, vero esse? Velit quos eius voluptatibus, blanditiis quae dicta at quam sint nisi beatae asperiores fugiat pariatur inventore nobis cumque quasi repudiandae voluptatem eos? Voluptate totam maxime mollitia sint nemo quod aliquid nobis, debitis officiis sed placeat repudiandae cum quae ducimus autem! Id eos corrupti iusto ab quis deserunt voluptatibus repellat odio similique quaerat autem, impedit aliquid suscipit.</p>
+  <div class="card" >
+    <div class="card-body">
+      <h5 class="card-title">Sobre SkyMusic</h5><br>
+      
+      <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt deserunt quibusdam obcaecati quasi? Distinctio temporibus sequi, aliquam veniam atque libero et unde soluta quidem cum cupiditate, sed minima dicta? Nobis tempore nesciunt natus cupiditate sint in maiores delectus? Architecto accusantium itaque optio beatae, incidunt reiciendis voluptas corrupti dolorem. Voluptatibus expedita veritatis nostrum. Velit animi maiores nemo. Ex totam enim consequatur. Illum ad dolore nulla quod expedita ipsum debitis quaerat adipisci at perferendis praesentium consequatur vero dicta, nobis nemo totam a aliquam harum eos cumque? Sed inventore placeat reiciendis molestiae, excepturi perferendis. Consectetur reprehenderit ratione quidem suscipit ipsa hic saepe earum!</p>
+    </div>
+  </div>
 
+  <div class="card" id="card1">
+    <div class="card-body">
+      <img src="../img/skymusic.png" alt="">
+    </div>
+  </div>
 
 
 
