--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <link rel="stylesheet" href="css/home.css">
   <link rel="stylesheet" href="css/barraNavegacao.css">
-  <link rel = "shortcut icon" type = "imagem/x-icon" href = "../img/skymusic.png"/>
+  <link rel="shortcut icon" type="imagem/x-icon" href="../img/skymusic.png" />
 
 </head>
 
 <body>
 
-  <nav class="navbar background">
 
+  <!--
+  <nav class="navbar background">
+    
     <ul class="nav-list">
       <li><a href="#">Home</a></li>
       <li><a href="html/musica.html">Músicas</a></li>
@@ -34,6 +36,41 @@
     <div class="rightNav2">
     </div>
   </nav>
+-->
+
+  <nav class="navbar background">
+    <ul class="nav-list">
+      
+      <div class="row">
+        <div class="col-sm-2">
+          <a class="link" href="#">Home</a>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-2">
+          <a class="link" href="html/musica.html">Músicas</a>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-2">
+          <a class="link" href="html/login.html">Login</a>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-2">
+          <a class="link" href="html/sobre.html">Sobre</a>
+        </div>
+      </div>
+
+    </ul>
+  </nav>
+
+
+
+
 
   <h3>Artistas em Destaque</h3>
 
@@ -103,47 +140,56 @@
 
   <h3>Músicas favoritas</h3>
 
-  <div id="musica2">
-    <div id="card" class="card" style="width: 17%;">
-      <img src="img/pericles2.JPG" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Supera</h5>
-        <a href="#" class="btn btn-primary">PLAY</a>
+  <div class="row" id="musica2">
+    <div class="col-sm-2">
+      <div id="card" class="card" style="width: 100%;">
+        <img src="img/pericles2.JPG" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Supera</h5>
+          <a href="#" class="btn btn-primary">PLAY</a>
+        </div>
       </div>
     </div>
 
-    <div id="card" class="card" style="width: 17%;">
-      <img src="img/montero.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">MONTERO</h5>
-        <a href="#" class="btn btn-primary">PLAY</a>
+    <div class="col-sm-2">
+      <div id="card" class="card" style="width: 100%;">
+        <img src="img/montero.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">MONTERO</h5>
+          <a href="#" class="btn btn-primary">PLAY</a>
+        </div>
       </div>
     </div>
 
-    <div id="card" class="card" style="width: 17%;">
-      <img src="img/myordinarylide.jpeg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">My Ordinary Life</h5>
-        <a href="#" class="btn btn-primary">PLAY</a>
+    <div class="col-sm-2">
+      <div id="card" class="card" style="width: 100%;">
+        <img src="img/myordinarylide.jpeg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">My Ordinary Life</h5>
+          <a href="#" class="btn btn-primary">PLAY</a>
+        </div>
       </div>
     </div>
 
-    <div id="card" class="card" style="width: 17%;">
-      <img src="img/vegas.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Vegas</h5>
-        <a href="#" class="btn btn-primary">PLAY</a>
+    <div class="col-sm-2">
+      <div id="card" class="card" style="width: 100%;">
+        <img src="img/vegas.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Vegas</h5>
+          <a href="#" class="btn btn-primary">PLAY</a>
+        </div>
       </div>
     </div>
 
-    <div id="card" class="card" style="width: 17%;">
-      <img src="img/ransom.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Ransom</h5>
-        <a href="#" class="btn btn-primary">PLAY</a>
+    <div class="col-sm-2">
+      <div id="card" class="card" style="width: 100%;">
+        <img src="img/ransom.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Ransom</h5>
+          <a href="#" class="btn btn-primary">PLAY</a>
+        </div>
       </div>
     </div>
-
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
