--- a/html/musica.html
+++ b/html/musica.html
@@ -4,18 +4,23 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-widt5.0, initial-scale=1.0">
   <title>Músicas</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <link rel="stylesheet" href="../css/musica.css">
   <link rel="stylesheet" href="../css/barraNavegacao.css">
+  <link rel="stylesheet" href="/css/player.css">
+  <script
+  src="https://code.jquery.com/jquery-3.6.1.min.js"
+  integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
+  crossorigin="anonymous"></script>
   <link rel="shortcut icon" type="imagem/x-icon" href="../img/skymusic.png" />
 
 </head>
 
-<body>
-
+<header>
+  <!-- Menu de da pagina -->
   <nav class="navbar background">
     <ul class="nav-list">
 
@@ -57,6 +62,10 @@
     </ul>
   </nav>
 
+</header>
+
+<body>
+  <!-- cardes 1-->
   <h3>Lançamentos</h3>
 
   <div class="row" id="musica2">
@@ -65,7 +74,8 @@
         <img src="../img/lancamentos/assaltante.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Assaltante</h5>
-          <a href="#" class="btn btn-primary">PLAY</a>
+          <audio id="audio1"  src="/musica/Meu Número (320 kbps).mp3"></audio>
+          <a class="btn btn-primary player1">PLAY</a>
         </div>
       </div>
     </div>
@@ -75,7 +85,9 @@
         <img src="../img/lancamentos/MeuNumero.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Meu número </h5>
-          <a href="#" class="btn btn-primary">PLAY</a>
+          <div class=""></div>
+          <audio id="audio2" src="/musica/audio.mp3"></audio>
+          <a class="btn btn-primary player1">PLAY</a>
         </div>
       </div>
     </div>
@@ -85,7 +97,7 @@
         <img src="../img/lancamentos/HajaColirio.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Haja colírio</h5>
-          <a href="#" class="btn btn-primary">PLAY</a>
+          <a class="btn btn-primary player1" >PLAY</a>
         </div>
       </div>
     </div>
@@ -95,7 +107,7 @@
         <img src="../img/lancamentos/rojao.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Rojão</h5>
-          <a href="#" class="btn btn-primary">PLAY</a>
+          <a class="btn btn-primary player1">PLAY</a>
         </div>
       </div>
     </div>
@@ -105,7 +117,7 @@
         <img src="../img/lancamentos/sereia.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Sereia</h5>
-          <a href="#" class="btn btn-primary">PLAY</a>
+          <a class="btn btn-primary player1">PLAY</a>
         </div>
       </div>
     </div>
@@ -121,7 +133,7 @@
         <img src="../img/recomendado/arranhao.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Arranhão</h5>
-          <a href="#" class="btn btn-primary">PLAY</a>
+          <a class="btn btn-primary player1">PLAY</a>
         </div>
       </div>
     </div>
@@ -131,7 +143,7 @@
         <img src="../img/recomendado/bloqueado.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Bloqueado</h5>
-          <a href="#" class="btn btn-primary">PLAY</a>
+          <a class="btn btn-primary player1">PLAY</a>
         </div>
       </div>
     </div>
@@ -141,7 +153,7 @@
         <img src="../img/recomendado/MalFeito.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Mal feito</h5>
-          <a href="#" class="btn btn-primary">PLAY</a>
+          <a class="btn btn-primary player1">PLAY</a>
         </div>
       </div>
     </div>
@@ -151,7 +163,7 @@
         <img src="../img/recomendado/malvadao.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Malvadão 3</h5>
-          <a href="#" class="btn btn-primary">PLAY</a>
+          <a class="btn btn-primary player1">PLAY</a>
         </div>
       </div>
     </div>
@@ -161,7 +173,7 @@
         <img src="../img/recomendado/volante.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Molhando o volante</h5>
-          <a href="#" class="btn btn-primary">PLAY</a>
+          <a class="btn btn-primary player1">PLAY</a>
         </div>
       </div>
     </div>
@@ -178,7 +190,7 @@
         <img src="../img/alta/Assunto.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Assunto delicado</h5>
-          <a href="#" class="btn btn-primary">PLAY</a>
+          <a class="btn btn-primary player1">PLAY</a>
         </div>
       </div>
     </div>
@@ -188,7 +200,7 @@
         <img src="../img/alta/Casei.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Casei com a putaria</h5>
-          <a href="#" class="btn btn-primary">PLAY</a>
+          <a class="btn btn-primary player1">PLAY</a>
         </div>
       </div>
     </div>
@@ -198,7 +210,7 @@
         <img src="../img/alta/GostoAssim.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Eu gosto assim</h5>
-          <a href="#" class="btn btn-primary">PLAY</a>
+          <a class="btn btn-primary player1">PLAY</a>
         </div>
       </div>
     </div>
@@ -208,7 +220,7 @@
         <img src="../img/alta/PoesiaAcustica.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Poesia acústica 13</h5>
-          <a href="#" class="btn btn-primary">PLAY</a>
+          <a class="btn btn-primary player1">PLAY</a>
         </div>
       </div>
     </div>
@@ -218,13 +230,50 @@
         <img src="../img/alta/sofrencia.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Sofrência remix</h5>
-          <a href="#" class="btn btn-primary">PLAY</a>
+          <a class="btn btn-primary player1">PLAY</a>
         </div>
       </div>
     </div>
   </div>
 
+  <!-- playr-audio -->
+  <main>
+    <div class="container">
+      <div class="player-controle">
+        <ul>
+          <li>
+            <a class="player"><img src="/icons/play.png" alt="play" width="31px"></a>
+          </li>
+          <li>
+            <a class="palse"><img src="/icons/palse.png" alt="palse" width="38px"></a>
+          </li>
+          <li>
+            <a class="proxima"><img src="/icons/proximo.png" alt="proximo" width="33px"></a>
+          </li>
+          <div class="barra">
+          <li class="inicio">0:00</li>
+          <progress></progress></li>
+             <li class="fim">3:40</li>
+        </ul>
+      </div>
+      </div>
+     <div class="audio"></div>
+    </div>
+  </main>
 
+  <footer>
+    <div class="informacao">
+      <ul>
+        <li>
+          <a href="/html/sobre.html">Sobre</a>
+        </li>
+        <li>
+          <a href="/html/musica.html">Musicas</a>
+        </li>
+      </ul>
+    </div>
+  </footer>
+  <script src="/js/script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
     crossorigin="anonymous"></script>
