atualização de estrutura de dados
Realizado alteração nos arquivos de audio

--- a/html/musica.html
+++ b/html/musica.html
@@ -75,7 +75,7 @@
         <img src="../img/lancamentos/assaltante.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Assaltante</h5>
-          <audio id="audio1"  src="../musica/Meu Número (320 kbps).mp3"></audio>
+          <audio id="audio1"  src="../musica/Alta/Assunto_Delicado.mp3"></audio>
           <a class="btn btn-primary player1">PLAY</a>
         </div>
       </div>
@@ -87,8 +87,8 @@
         <div class="card-body">
           <h5 class="card-title">Meu número </h5>
           <div class=""></div>
-          <audio id="audio2" src="../musica/audio.mp3"></audio>
-          <a class="btn btn-primary player1">PLAY</a>
+          <audio id="audio2" src="../musica/Meu Número (320 kbps).mp3"></audio>
+          <a class="btn btn-primary playerALL">PLAY</a>
         </div>
       </div>
     </div>
@@ -98,7 +98,9 @@
         <img src="../img/lancamentos/HajaColirio.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Haja colírio</h5>
-          <a class="btn btn-primary player1" >PLAY</a>
+          <div class=""></div>
+          <audio id="audio2" src="../musica/Lancamentos/Haja Colírio.mp3"></audio>
+          <a class="btn btn-primary playerALL" >PLAY</a>
         </div>
       </div>
     </div>
@@ -108,7 +110,9 @@
         <img src="../img/lancamentos/rojao.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Rojão</h5>
-          <a class="btn btn-primary player1">PLAY</a>
+          <div class=""></div>
+          <audio id="audio2" src="../musica/Lancamentos/Rojão.mp3"></audio>
+          <a class="btn btn-primary playerALL">PLAY</a>
         </div>
       </div>
     </div>
@@ -118,14 +122,16 @@
         <img src="../img/lancamentos/sereia.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Sereia</h5>
-          <a class="btn btn-primary player1">PLAY</a>
+          <div class=""></div>
+          <audio id="audio2" src="../musica/Lancamentos/SEREIA.mp3"></audio>
+          <a class="btn btn-primary playerALL">PLAY</a>
         </div>
       </div>
     </div>
 
   </div>
 
-
+<!-- cardes 2-->
   <h3>Recomendado</h3>
 
   <div class="row" id="musica2">
@@ -134,7 +140,7 @@
         <img src="../img/recomendado/arranhao.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Arranhão</h5>
-          <a class="btn btn-primary player1">PLAY</a>
+          <a class="btn btn-primary playerALL">PLAY</a>
         </div>
       </div>
     </div>
@@ -144,7 +150,7 @@
         <img src="../img/recomendado/bloqueado.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Bloqueado</h5>
-          <a class="btn btn-primary player1">PLAY</a>
+          <a class="btn btn-primary playerALL">PLAY</a>
         </div>
       </div>
     </div>
@@ -154,7 +160,7 @@
         <img src="../img/recomendado/MalFeito.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Mal feito</h5>
-          <a class="btn btn-primary player1">PLAY</a>
+          <a class="btn btn-primary playerALL">PLAY</a>
         </div>
       </div>
     </div>
@@ -164,7 +170,7 @@
         <img src="../img/recomendado/malvadao.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Malvadão 3</h5>
-          <a class="btn btn-primary player1">PLAY</a>
+          <a class="btn btn-primary playerALL">PLAY</a>
         </div>
       </div>
     </div>
@@ -174,7 +180,7 @@
         <img src="../img/recomendado/volante.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Molhando o volante</h5>
-          <a class="btn btn-primary player1">PLAY</a>
+          <a class="btn btn-primary playerALL">PLAY</a>
         </div>
       </div>
     </div>
@@ -182,7 +188,7 @@
 
 
 
-
+<!-- cardes 2-->
   <h3>Em alta</h3>
 
   <div class="row" id="musica2">
@@ -191,7 +197,7 @@
         <img src="../img/alta/Assunto.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Assunto delicado</h5>
-          <a class="btn btn-primary player1">PLAY</a>
+          <a class="btn btn-primary playerALL">PLAY</a>
         </div>
       </div>
     </div>
