--- a/html/login.html
+++ b/html/login.html
@@ -5,7 +5,7 @@
     <title>Login</title>
     <link rel="icon" href="../imagens/logoMiniatura.jpeg">
     <link rel="stylesheet" href="../css/login.css">
-    <script src="../js/login.js"></script>
+    <script src="../login.js"></script>
     <link rel = "shortcut icon" type = "imagem/x-icon" href = "../img/skymusic.png"/>
 
     
@@ -16,7 +16,7 @@
             <h1 id="login">Login</h1>
             <input type="email" runat="server" id="email" placeholder="Digite seu email"  name="username" required="">
             <br> <br>
-            <input type="password" runat="server" id="pass" placeholder="Digite sua senha"  name="password" required="">
+            <input type="password" runat="server" id="pass" placeholder="Digite sua senha"  name="senha" required="">
             <br><br>
             <div class="group">
                 <input id="check " type="checkbox" class="check">
