--- a/html/cadastro.html
+++ b/html/cadastro.html
@@ -8,21 +8,20 @@
     <link rel="stylesheet" href="../css/cadastro.css">
     <script src="../JS/login.js"></script>
     <link rel="shortcut icon" type="imagem/x-icon" href="../img/skymusic.png" />
+    <script src="/js/login.js"></script>
 
 </head>
 
 <body>
     <form name="login">
-        <div>
+        <div class="bloco">
 
             <h1 id="login">Cadastro</h1>
-            <input type="text" id="nomeid" placeholder="Digite seu nome" required name="text">
-            <br> <br>
-            <input type="email" id="loginid" placeholder="Digite seu email" required name="email">
+            <input type="email" id="loginid" placeholder="Digite seu email" required name="usermail">
             <br> <br>
             <input type="password" id="senhaid" placeholder="Digite sua senha" required name="senha">
             <br><br>
-            <input type="submit" class="enviar" onclick="Enviar();" value="Concluido">
+            <input type="button" class="enviar" onclick="Enviar();" value="Concluido">
             <br><br>
 
         </div>
