--- a/html/cadastro.html
+++ b/html/cadastro.html
@@ -15,15 +15,13 @@
 <body>
     <form name="login">
         <div class="bloco">
-
             <h1 id="login">Cadastro</h1>
-            <input type="email" id="loginid" placeholder="Digite seu email" required name="usermail">
+            <input type="email" id="loginid" name="" placeholder="Digite seu email" required name="userEmail">
             <br> <br>
             <input type="password" id="senhaid" placeholder="Digite sua senha" required name="senha">
             <br><br>
-            <input type="button" class="enviar" onclick="Enviar();" value="Concluido">
+            <input type="button" class="enviar" name="enviar" onclick="add();" value="Concluido">
             <br><br>
-
         </div>
     </form>
 
