--- a/index.html
+++ b/index.html
@@ -171,7 +171,20 @@
   </div>
 
   <footer>
-    
+    <div class="informaocao">
+      <p>EMPRESA</p>
+      <li>
+        <a href="./html/sobre.html">Sobre</a>
+        <a href="./html/login.html">Empresa</a>
+        <a href="./index.html">Home</a>
+      </li>
+        <li>
+          <a href="#">Legal</a>
+          <a href="#">Central de privacidade</a>
+          <a href="#">Politica de privacidade</a>
+          <a href="#">Cookies</a>
+        </li>
+    </div>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
