--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <link rel="stylesheet" href="css/home.css">
   <link rel="stylesheet" href="css/barraNavegacao.css">
+  <link rel="stylesheet" href="./css/footer.css">
   <link rel="shortcut icon" type="imagem/x-icon" href="img/skymusic.png" />
 
 </head>
@@ -172,18 +173,18 @@
 
   <footer>
     <div class="informaocao">
-      <p>EMPRESA</p>
+      <h6>EMPRESA</h6>
+      <ul>
       <li>
         <a href="./html/sobre.html">Sobre</a>
-        <a href="./html/login.html">Empresa</a>
+        <a href="./html/login.html">Login</a>
         <a href="./index.html">Home</a>
-      </li>
-        <li>
           <a href="#">Legal</a>
           <a href="#">Central de privacidade</a>
           <a href="#">Politica de privacidade</a>
           <a href="#">Cookies</a>
         </li>
+      </ul>
     </div>
   </footer>
 
