--- a/html/login.html
+++ b/html/login.html
@@ -5,7 +5,7 @@
     <title>Login</title>
     <link rel="icon" href="../imagens/logoMiniatura.jpeg">
     <link rel="stylesheet" href="../css/login.css">
-    <script src="login.js"></script>
+    <!--<script src="login.js"></script>-->
     <link rel = "shortcut icon" type = "imagem/x-icon" href = "../img/skymusic.png"/>
 </head>
 <body>
@@ -26,7 +26,28 @@
             <a class="link" href="../index.html">Home</a>
          </div>
     </form> 
+<script>
+    var usuarios = [
+    {"email": "afsilva3021@uni9.edu.br", "senha": "123"},
+    {"email": "leo10machadosiqueira@uni9.edu.br", "senha": "123"},
+    {"email": "professor", "senha": "123"},
+];
+  
+  function Login() {
+    var usuario = document.getElementsByName('email')[0].value.toLowerCase();
+    var senha = document.getElementsByName('password')[0].value;
+    for (var u in usuarios) {
+        var us = usuarios[u];
+        if (us.email == usuario && us.senha == senha) {
+            window.location = "musica.html";
+            return true;
+        }
 
+    }
+    alert("Dados incorretos, tente novamente.");
+    return false;
+  }
+    </script>
     
 </body>
 </html>
